--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -10,9 +10,10 @@
   pages     = {1332--1344},
   year      = {2024},
   month     = jan,
+  html      = {https://www.sciencedirect.com/science/article/abs/pii/S0360319923057208},
   doi       = {10.1016/j.ijhydene.2023.11.038},
   preview   = {mixing-h2.jpg},
-  url       = {https://www.sciencedirect.com/science/article/abs/pii/S0360319923057208},
+  code      = {https://github.com/arashjkh/gas-mixture-models-Fluent},
   abstract  = {Hydrogen injection into natural gas distribution pipeline system through Tee junctions is numerically studied, by considering both ideal and Soave–Redlich–Kwong real gas models. The mixing homogeneity length is quantified for various side pipe sizes and perpendicular configurations for distribution-pressure and intermediate-pressure pipelines. The buoyant nature of hydrogen once blended into natural gas pipelines introduces a challenge as it tends to stratify and become trapped near the top wall. Accordingly, a greater side flow momentum leads to a shorter mixing homogeneity length. This reduces up to three to five times particularly when it penetrates deeply into the main flow without getting trapped from the beginning. Consequently, vertical bottom-side injection yields a mixing homogeneity length that is roughly four times shorter than horizontal and five times shorter than vertical top-side injection. Furthermore, employing a real gas model is critical once the pressure rises to intermediate pressures, resulting in a greater homogeneity length.},
   keywords  = {Mixing, Injection, Blending, Equation of state, Coefficient of variation, CFD}
 }
