--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,19 @@
 ---
 ---
 
+@inproceedings{Khabbazi2024-Herrick,
+  title       = "What Have We Learned From Field Demonstrations of Advanced Commercial HVAC Control?",
+  author      = "Khabbazi, Arash J and Pergantis, Elias N and Reyes Premer, Levi D and Lee, Alex H and Ma, Jie and Liu, Haotian and Henze, Gregor P and Kircher, Kevin J",
+  booktitle   = "8th International High Performance Buildings Conference at Purdue",
+  institution = "Purdue University",
+  pages       = "1--10",
+  abstract    = "Many simulation studies have suggested that advanced control strategies for heating, ventilation, and air-conditioning (HVAC) equipment in commercial buildings can help reduce energy costs and greenhouse gas emissions. However, despite these potential benefits, adoption of advanced HVAC control remains limited, due in part to a lack of confidence in the technology among decision-makers in business and government. Field demonstrations of advanced HVAC control help build confidence in the technology by demonstrating its effectiveness and economic value in the real world. This paper accordingly reviews field demonstrations of advanced commercial HVAC control strategies, such as Model Predictive Control (MPC) and Reinforcement Learning Control (RLC). This paper discusses building types, control methods, test durations, measurement and verification procedures, control objectives, and reported benefits. It further provides a critical assessment of the state of the technology and highlights research opportunities that could accelerate real-world adoption of advanced commercial HVAC control strategies. The literature review confirms that advanced HVAC controls can significantly enhance energy efficiency and occupant comfort. However, most field studies cover relatively short durations and control small spaces within larger buildings. Longer-duration studies frequently report lower savings, suggesting that short-duration studies may overestimate potential benefits. Similarly, whole-building control studies typically report lower savings than smaller-scale studies, likely because the latter tend to overlook thermal coupling between controlled zones and adjacent zones. Finally, data and discussions concerning deployment costs and challenges are almost nonexistent. This suggests an important area for future research, as achieving adoption at scale will require demonstrating not only reliable benefits but also manageable deployment costs.",
+  month       =  jul,
+  year        =  2024,
+  html        = {https://docs.lib.purdue.edu/ihpbc/473/},
+  preview     = {Herrick-conferences.gif},
+}
+
 @article{Khabbazi2024-mixingh2,
   title     = {Mixing hydrogen into natural gas distribution pipeline system through Tee junctions},
   author    = {Khabbazi, Arash J and Zabihi, Mojtaba and Li, Ri and Hill, Matthew and Chou, Vincent and Quinn, John},
@@ -11,7 +24,6 @@
   year      = {2024},
   month     = jan,
   html      = {https://www.sciencedirect.com/science/article/abs/pii/S0360319923057208},
-  doi       = {10.1016/j.ijhydene.2023.11.038},
   preview   = {mixing-h2.jpg},
   code      = {https://github.com/arashjkh/gas-mixture-models-Fluent},
   abstract  = {Hydrogen injection into natural gas distribution pipeline system through Tee junctions is numerically studied, by considering both ideal and Soave–Redlich–Kwong real gas models. The mixing homogeneity length is quantified for various side pipe sizes and perpendicular configurations for distribution-pressure and intermediate-pressure pipelines. The buoyant nature of hydrogen once blended into natural gas pipelines introduces a challenge as it tends to stratify and become trapped near the top wall. Accordingly, a greater side flow momentum leads to a shorter mixing homogeneity length. This reduces up to three to five times particularly when it penetrates deeply into the main flow without getting trapped from the beginning. Consequently, vertical bottom-side injection yields a mixing homogeneity length that is roughly four times shorter than horizontal and five times shorter than vertical top-side injection. Furthermore, employing a real gas model is critical once the pressure rises to intermediate pressures, resulting in a greater homogeneity length.},
