--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,7 +11,7 @@
   month       =  jul,
   year        =  2024,
   html        = {https://docs.lib.purdue.edu/ihpbc/473/},
-  preview     = {Herrick-conferences.gif},
+  preview     = {Herrick2024.jpg},
 }
 
 @article{Khabbazi2024-mixingh2,
