--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,17 +1,30 @@
 ---
 ---
 
+@article{Khabbazi2025-review-MPC-RL,
+  title         = {Lessons Learned from Field Demonstrations of Model Predictive Control and Reinforcement Learning for Residential and Commercial HVAC: A Review},
+  author        = {Khabbazi, Arash J. and Pergantis, Elias N. and Premer, Levi D. Reyes and Papageorgiou, Panagiotis and Lee, Alex H. and Braun, James E. and Henze, Gregor P. and Kircher, Kevin J.},
+  journal       = {arXiv preprint arXiv:2503.05022 [eess.SY]},
+  year          = {2025},
+  month         = mar,
+  abstract      = {A substantial body of simulation research suggests that Model Predictive Control (MPC) and Reinforcement Learning (RL) can reduce energy costs, emissions, and grid stress in residential and commercial buildings. Yet, adoption in practice remains limited. Field demonstrations offer real-world insights and could bridge this gap by validating performance and economic viability. This review examines 104 field studies—24 in residential and 80 in commercial settings—evaluating experiment demographics, protocols, and reported outcomes. We find that 71\% of demonstrations rely on potentially unreliable protocols, while the remaining 29\%, considered more robust, report weighted-average cost savings of 16\% (residential) and 13\% (commercial). However, deployment costs remain underreported; only 13 studies address them. We outline five key recommendations to guide future field research, emphasizing protocol rigor, cost transparency, integration with other distributed energy resources, and emerging grid services.},
+  html          = {https://arxiv.org/abs/2503.05022},
+  preview       = {review-MPC-RL.png},
+  archivePrefix = {arXiv},
+  primaryClass  = {eess.SY}
+}
+
 @inproceedings{Khabbazi2024-Herrick,
-  title       = "What Have We Learned From Field Demonstrations of Advanced Commercial HVAC Control?",
-  author      = "Khabbazi, Arash J and Pergantis, Elias N and Reyes Premer, Levi D and Lee, Alex H and Ma, Jie and Liu, Haotian and Henze, Gregor P and Kircher, Kevin J",
-  booktitle   = "8th International High Performance Buildings Conference at Purdue",
-  institution = "Purdue University",
-  pages       = "1--10",
-  abstract    = "Many simulation studies have suggested that advanced control strategies for heating, ventilation, and air-conditioning (HVAC) equipment in commercial buildings can help reduce energy costs and greenhouse gas emissions. However, despite these potential benefits, adoption of advanced HVAC control remains limited, due in part to a lack of confidence in the technology among decision-makers in business and government. Field demonstrations of advanced HVAC control help build confidence in the technology by demonstrating its effectiveness and economic value in the real world. This paper accordingly reviews field demonstrations of advanced commercial HVAC control strategies, such as Model Predictive Control (MPC) and Reinforcement Learning Control (RLC). This paper discusses building types, control methods, test durations, measurement and verification procedures, control objectives, and reported benefits. It further provides a critical assessment of the state of the technology and highlights research opportunities that could accelerate real-world adoption of advanced commercial HVAC control strategies. The literature review confirms that advanced HVAC controls can significantly enhance energy efficiency and occupant comfort. However, most field studies cover relatively short durations and control small spaces within larger buildings. Longer-duration studies frequently report lower savings, suggesting that short-duration studies may overestimate potential benefits. Similarly, whole-building control studies typically report lower savings than smaller-scale studies, likely because the latter tend to overlook thermal coupling between controlled zones and adjacent zones. Finally, data and discussions concerning deployment costs and challenges are almost nonexistent. This suggests an important area for future research, as achieving adoption at scale will require demonstrating not only reliable benefits but also manageable deployment costs.",
-  month       =  jul,
-  year        =  2024,
+  title       = {What Have We Learned from Field Demonstrations of Advanced Commercial HVAC Control?},
+  author      = {Khabbazi, Arash J. and Pergantis, Elias N. and Reyes Premer, Levi D. and Lee, Alex H. and Ma, Jie and Liu, Haotian and Henze, Gregor P. and Kircher, Kevin J.},
+  booktitle   = {Proceedings of the 8th International High Performance Buildings Conference},
+  institution = {Purdue University},
+  pages       = {1--10},
+  month       = jul,
+  year        = {2024},
   html        = {https://docs.lib.purdue.edu/ihpbc/473/},
   preview     = {Herrick2024.jpg},
+  abstract    = {Simulation studies suggest that advanced control strategies—such as Model Predictive Control (MPC) and Reinforcement Learning Control (RLC)—can reduce energy costs and greenhouse gas emissions in commercial buildings. Yet, real-world adoption remains limited due to uncertainty around performance and implementation costs. This paper reviews field demonstrations of advanced commercial HVAC control to address these concerns. It examines building types, control approaches, test durations, verification protocols, objectives, and reported outcomes. Results indicate that most demonstrations are short-term or limited in scope, often overstating potential benefits. Whole-building and long-duration studies show lower but more reliable savings. The review also highlights a major research gap: deployment cost data are scarce. Overcoming this limitation is critical for scaling adoption and building the business case for advanced HVAC control.}
 }
 
 @article{Khabbazi2024-mixingh2,
