--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -10,8 +10,10 @@
   abstract      = {A substantial body of simulation research suggests that Model Predictive Control (MPC) and Reinforcement Learning (RL) can reduce energy costs, emissions, and grid stress in residential and commercial buildings. Yet, adoption in practice remains limited. Field demonstrations offer real-world insights and could bridge this gap by validating performance and economic viability. This review examines 104 field studies—24 in residential and 80 in commercial settings—evaluating experiment demographics, protocols, and reported outcomes. We find that 71\% of demonstrations rely on potentially unreliable protocols, while the remaining 29\%, considered more robust, report weighted-average cost savings of 16\% (residential) and 13\% (commercial). However, deployment costs remain underreported; only 13 studies address them. We outline five key recommendations to guide future field research, emphasizing protocol rigor, cost transparency, integration with other distributed energy resources, and emerging grid services.},
   html          = {https://arxiv.org/abs/2503.05022},
   preview       = {review-MPC-RL.png},
+  code          = {https://github.com/arashjkh/field-demonstrations-HVAC-MPC-RL},
   archivePrefix = {arXiv},
-  primaryClass  = {eess.SY}
+  primaryClass  = {eess.SY},
+  selected      = {true}
 }
 
 @inproceedings{Khabbazi2024-Herrick,
@@ -24,7 +26,8 @@
   year        = {2024},
   html        = {https://docs.lib.purdue.edu/ihpbc/473/},
   preview     = {Herrick2024.jpg},
-  abstract    = {Simulation studies suggest that advanced control strategies—such as Model Predictive Control (MPC) and Reinforcement Learning Control (RLC)—can reduce energy costs and greenhouse gas emissions in commercial buildings. Yet, real-world adoption remains limited due to uncertainty around performance and implementation costs. This paper reviews field demonstrations of advanced commercial HVAC control to address these concerns. It examines building types, control approaches, test durations, verification protocols, objectives, and reported outcomes. Results indicate that most demonstrations are short-term or limited in scope, often overstating potential benefits. Whole-building and long-duration studies show lower but more reliable savings. The review also highlights a major research gap: deployment cost data are scarce. Overcoming this limitation is critical for scaling adoption and building the business case for advanced HVAC control.}
+  abstract    = {Simulation studies suggest that advanced control strategies—such as Model Predictive Control (MPC) and Reinforcement Learning Control (RLC)—can reduce energy costs and greenhouse gas emissions in commercial buildings. Yet, real-world adoption remains limited due to uncertainty around performance and implementation costs. This paper reviews field demonstrations of advanced commercial HVAC control to address these concerns. It examines building types, control approaches, test durations, verification protocols, objectives, and reported outcomes. Results indicate that most demonstrations are short-term or limited in scope, often overstating potential benefits. Whole-building and long-duration studies show lower but more reliable savings. The review also highlights a major research gap: deployment cost data are scarce. Overcoming this limitation is critical for scaling adoption and building the business case for advanced HVAC control.},
+  selected    = {true}
 }
 
 @article{Khabbazi2024-mixingh2,
@@ -40,7 +43,8 @@
   preview   = {mixing-h2.jpg},
   code      = {https://github.com/arashjkh/gas-mixture-models-Fluent},
   abstract  = {Hydrogen injection into natural gas distribution pipeline system through Tee junctions is numerically studied, by considering both ideal and Soave–Redlich–Kwong real gas models. The mixing homogeneity length is quantified for various side pipe sizes and perpendicular configurations for distribution-pressure and intermediate-pressure pipelines. The buoyant nature of hydrogen once blended into natural gas pipelines introduces a challenge as it tends to stratify and become trapped near the top wall. Accordingly, a greater side flow momentum leads to a shorter mixing homogeneity length. This reduces up to three to five times particularly when it penetrates deeply into the main flow without getting trapped from the beginning. Consequently, vertical bottom-side injection yields a mixing homogeneity length that is roughly four times shorter than horizontal and five times shorter than vertical top-side injection. Furthermore, employing a real gas model is critical once the pressure rises to intermediate pressures, resulting in a greater homogeneity length.},
-  keywords  = {Mixing, Injection, Blending, Equation of state, Coefficient of variation, CFD}
+  keywords  = {Mixing, Injection, Blending, Equation of state, Coefficient of variation, CFD},
+  selected  = {true}
 }
 
 
