--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -32,7 +32,7 @@
 
 @article{Khabbazi2024-mixingh2,
   title     = {Mixing hydrogen into natural gas distribution pipeline system through Tee junctions},
-  author    = {Khabbazi, Arash J and Zabihi, Mojtaba and Li, Ri and Hill, Matthew and Chou, Vincent and Quinn, John},
+  author    = {Khabbazi, Arash J. and Zabihi, Mojtaba and Li, Ri and Hill, Matthew and Chou, Vincent and Quinn, John},
   journal   = {International Journal of Hydrogen Energy},
   volume    = {49},
   number    = {2},
@@ -45,6 +45,20 @@
   abstract  = {Hydrogen injection into natural gas distribution pipeline system through Tee junctions is numerically studied, by considering both ideal and Soave–Redlich–Kwong real gas models. The mixing homogeneity length is quantified for various side pipe sizes and perpendicular configurations for distribution-pressure and intermediate-pressure pipelines. The buoyant nature of hydrogen once blended into natural gas pipelines introduces a challenge as it tends to stratify and become trapped near the top wall. Accordingly, a greater side flow momentum leads to a shorter mixing homogeneity length. This reduces up to three to five times particularly when it penetrates deeply into the main flow without getting trapped from the beginning. Consequently, vertical bottom-side injection yields a mixing homogeneity length that is roughly four times shorter than horizontal and five times shorter than vertical top-side injection. Furthermore, employing a real gas model is critical once the pressure rises to intermediate pressures, resulting in a greater homogeneity length.},
   keywords  = {Mixing, Injection, Blending, Equation of state, Coefficient of variation, CFD},
   selected  = {true}
+}
+
+@mastersthesis{Khabbazi-2023-MASc-UBC,
+  author       = {Jalil Khabbazi, Arash},
+  title        = {Mixing Gaseous Hydrogen into Natural Gas Distribution Pipelines},
+  school       = {University of British Columbia},
+  type         = {Master of Applied Science thesis},
+  year         = {2023},
+  month        = nov,
+  abstract     = {Hydrogen, as an alternative source of energy, has the potential to minimize greenhouse gas (GHG) emissions. Through different sources and industrial processes, it is feasible to produce hydrogen. Therefore, blending certain percentages of hydrogen into the existing natural gas pipeline infrastructure can greatly decrease the carbon intensity of current gas grids while also promoting a more sustainable energy system. Nevertheless, the significant density contrast of almost eight to nine times between hydrogen and natural gas introduces a challenge as buoyant hydrogen tends to stratify and become trapped near the top wall once injected via a Tee junction. In this study, the hydrogen blending into the natural gas distribution pipelines using Tee junctions is numerically investigated, and the mixing homogeneity (uniformity) length is quantified through the coefficient of variation (CoV) of the hydrogen mole fraction. The effect of secondary (side) flow jet intensity on turbulent mixing in a distribution-pressure (DP) system is first looked into by altering the secondary pipe diameter while maintaining the same flow rate. Consequently, the differences between vertical top-side, horizontal, and vertical bottom-side injection configurations in an intermediate-pressure (IP) case are studied. The ideal and real gas equations of state (EoS) scenarios are next investigated in the IP case. Overall, a greater secondary flow jet intensity results in a shorter mixing homogeneity length, as investigated in the DP case. The mixing homogeneity length is shortened even further if the secondary flow penetrates deep into the primary (main) flow of natural gas without getting trapped near the top wall from the outset. Vertical bottom-side injection also results in a mixing homogeneity length that is roughly four times shorter than horizontal injection and five times shorter than vertical top-side injection in the IP case. When industry standards are followed, injecting from the bottom definitely outperforms other injection setups. Furthermore, using real gas EoS, such as Soave-Redlich-Kwong (SRK), becomes crucial when the operating pressure rises, resulting in a longer mixing homogeneity length.},
+  doi          = {https://dx.doi.org/10.14288/1.0437514},
+  html         = {https://open.library.ubc.ca/soa/cIRcle/collections/ubctheses/24/items/1.0437514},
+  preview      = {UBC.jpg},
+  code         = {https://github.com/arashjkh/gas-mixture-models-Fluent}
 }
 
 
