--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,6 +9,7 @@
   month         = mar,
   abstract      = {A substantial body of simulation research suggests that Model Predictive Control (MPC) and Reinforcement Learning (RL) can reduce energy costs, emissions, and grid stress in residential and commercial buildings. Yet, adoption in practice remains limited. Field demonstrations offer real-world insights and could bridge this gap by validating performance and economic viability. This review examines 104 field studies—24 in residential and 80 in commercial settings—evaluating experiment demographics, protocols, and reported outcomes. We find that 71\% of demonstrations rely on potentially unreliable protocols, while the remaining 29\%, considered more robust, report weighted-average cost savings of 16\% (residential) and 13\% (commercial). However, deployment costs remain underreported; only 13 studies address them. We outline five key recommendations to guide future field research, emphasizing protocol rigor, cost transparency, integration with other distributed energy resources, and emerging grid services.},
   html          = {https://arxiv.org/abs/2503.05022},
+  doi           = {10.48550/arXiv.2503.05022},
   preview       = {review-MPC-RL.png},
   code          = {https://github.com/arashjkh/field-demonstrations-HVAC-MPC-RL},
   archivePrefix = {arXiv},
@@ -25,6 +26,7 @@
   month       = jul,
   year        = {2024},
   html        = {https://docs.lib.purdue.edu/ihpbc/473/},
+  html        = {10.5703/1288284317483},
   preview     = {Herrick2024.jpg},
   abstract    = {Simulation studies suggest that advanced control strategies—such as Model Predictive Control (MPC) and Reinforcement Learning Control (RLC)—can reduce energy costs and greenhouse gas emissions in commercial buildings. Yet, real-world adoption remains limited due to uncertainty around performance and implementation costs. This paper reviews field demonstrations of advanced commercial HVAC control to address these concerns. It examines building types, control approaches, test durations, verification protocols, objectives, and reported outcomes. Results indicate that most demonstrations are short-term or limited in scope, often overstating potential benefits. Whole-building and long-duration studies show lower but more reliable savings. The review also highlights a major research gap: deployment cost data are scarce. Overcoming this limitation is critical for scaling adoption and building the business case for advanced HVAC control.},
   selected    = {true}
@@ -40,6 +42,7 @@
   year      = {2024},
   month     = jan,
   html      = {https://www.sciencedirect.com/science/article/abs/pii/S0360319923057208},
+  html      = {10.1016/j.ijhydene.2023.11.038},
   preview   = {mixing-h2.jpg},
   code      = {https://github.com/arashjkh/gas-mixture-models-Fluent},
   abstract  = {Hydrogen injection into natural gas distribution pipeline system through Tee junctions is numerically studied, by considering both ideal and Soave–Redlich–Kwong real gas models. The mixing homogeneity length is quantified for various side pipe sizes and perpendicular configurations for distribution-pressure and intermediate-pressure pipelines. The buoyant nature of hydrogen once blended into natural gas pipelines introduces a challenge as it tends to stratify and become trapped near the top wall. Accordingly, a greater side flow momentum leads to a shorter mixing homogeneity length. This reduces up to three to five times particularly when it penetrates deeply into the main flow without getting trapped from the beginning. Consequently, vertical bottom-side injection yields a mixing homogeneity length that is roughly four times shorter than horizontal and five times shorter than vertical top-side injection. Furthermore, employing a real gas model is critical once the pressure rises to intermediate pressures, resulting in a greater homogeneity length.},
@@ -55,10 +58,24 @@
   year         = {2023},
   month        = nov,
   abstract     = {Hydrogen, as an alternative source of energy, has the potential to minimize greenhouse gas (GHG) emissions. Through different sources and industrial processes, it is feasible to produce hydrogen. Therefore, blending certain percentages of hydrogen into the existing natural gas pipeline infrastructure can greatly decrease the carbon intensity of current gas grids while also promoting a more sustainable energy system. Nevertheless, the significant density contrast of almost eight to nine times between hydrogen and natural gas introduces a challenge as buoyant hydrogen tends to stratify and become trapped near the top wall once injected via a Tee junction. In this study, the hydrogen blending into the natural gas distribution pipelines using Tee junctions is numerically investigated, and the mixing homogeneity (uniformity) length is quantified through the coefficient of variation (CoV) of the hydrogen mole fraction. The effect of secondary (side) flow jet intensity on turbulent mixing in a distribution-pressure (DP) system is first looked into by altering the secondary pipe diameter while maintaining the same flow rate. Consequently, the differences between vertical top-side, horizontal, and vertical bottom-side injection configurations in an intermediate-pressure (IP) case are studied. The ideal and real gas equations of state (EoS) scenarios are next investigated in the IP case. Overall, a greater secondary flow jet intensity results in a shorter mixing homogeneity length, as investigated in the DP case. The mixing homogeneity length is shortened even further if the secondary flow penetrates deep into the primary (main) flow of natural gas without getting trapped near the top wall from the outset. Vertical bottom-side injection also results in a mixing homogeneity length that is roughly four times shorter than horizontal injection and five times shorter than vertical top-side injection in the IP case. When industry standards are followed, injecting from the bottom definitely outperforms other injection setups. Furthermore, using real gas EoS, such as Soave-Redlich-Kwong (SRK), becomes crucial when the operating pressure rises, resulting in a longer mixing homogeneity length.},
-  doi          = {https://dx.doi.org/10.14288/1.0437514},
+  doi          = {10.14288/1.0437514},
   html         = {https://open.library.ubc.ca/soa/cIRcle/collections/ubctheses/24/items/1.0437514},
   preview      = {UBC.jpg},
-  code         = {https://github.com/arashjkh/gas-mixture-models-Fluent}
+  code         = {https://github.com/arashjkh/gas-mixture-models-Fluent},
+  selected     = {true}
 }
 
-
+@inproceedings{Khabbazi2023-CSME,
+  author       = {Arash J. Khabbazi and Mojtaba Zabihi and Ri Li and Matthew Hill and Vincent Chou and John Quinn},
+  title        = {Blending of Hydrogen Into a Natural Gas Distribution Pipeline in British Columbia Through a Tee Junction for Reducing GHG Emissions},
+  booktitle    = {Proceedings of the CSME-CFD Canada International Congress},
+  year         = {2023},
+  month        = {May},
+  address      = {Sherbrooke, QC, Canada},
+  doi          = {10.17118/11143/20845},
+  html         = {https://usherbrooke.scholaris.ca/items/663501a4-ff6c-46b2-98c7-25913c37d6e5},
+  organization = {Canadian Society for Mechanical Engineering (CSME)},
+  code         = {https://github.com/arashjkh/gas-mixture-models-Fluent},
+  preview      = {CSME2023.jpg},
+  selected     = {true}
+}
