--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -75,6 +75,7 @@
   booktitle    = {Proceedings of the CSME-CFD Canada International Congress},
   year         = {2023},
   month        = {May},
+  abstract     = {Abstract: Integrating renewable hydrogen into the existing natural gas infrastructure network can reduce greenhouse gas (GHG) emissions and enhance electricity storage efficiency. To ensure a functional and durable network, attaining homogeneous mixing as quickly as possible is crucial. This study employs CFD analysis to evaluate hydrogen and methane mixing homogeneity in a pipeline with a vertical top-side Tee junction. The coefficient of variation (CoV) of hydrogen mole fraction is analyzed along cross-sectional slices of a distribution pressure (DP) pipe where the ideal gas law is applicable due to low pressures. The findings reveal that reducing the diameter of the side pipe while maintaining the main pipe diameter results in a shorter mixing homogeneity length due to enhanced side flow jet penetration and increased diffusion. Notably, a sharp drop in the CoV figure is evidenced when reducing the side pipe from NPS 1.25 to NPS 1.0, leading to a substantial decrease in the mixing homogeneity length from 143 main pipe diameters from the branch center to 38 diameters.},
   address      = {Sherbrooke, QC, Canada},
   doi          = {10.17118/11143/20845},
   html         = {https://usherbrooke.scholaris.ca/items/663501a4-ff6c-46b2-98c7-25913c37d6e5},
