--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,8 +9,11 @@
   volume        = {370},
   pages         = {126459},
   doi           = {10.1016/j.apenergy.2025.126459},
-  url           = {https://doi.org/10.1016/j.apenergy.2025.126459},
-  abstract      = {A substantial body of simulation research suggests that Model Predictive Control (MPC) and Reinforcement Learning (RL) can reduce energy costs, emissions, and grid stress in residential and commercial buildings. Yet, adoption in practice remains limited. Field demonstrations offer real-world insights and could bridge this gap by validating performance and economic viability. This review examines 104 field studies—24 in residential and 80 in commercial settings—evaluating experiment demographics, protocols, and reported outcomes. We find that 71\% of demonstrations rely on potentially unreliable protocols, while the remaining 29\%, considered more robust, report weighted-average cost savings of 16\% (residential) and 13\% (commercial). However, deployment costs remain underreported; only 13 studies address them. We outline five key recommendations to guide future field research, emphasizing protocol rigor, cost transparency, integration with other distributed energy resources, and emerging grid services.}
+  html          = {https://doi.org/10.1016/j.apenergy.2025.126459},
+  preview       = {review-MPC-RL.png},
+  abstract      = {A substantial body of simulation research suggests that Model Predictive Control (MPC) and Reinforcement Learning (RL) can reduce energy costs, emissions, and grid stress in residential and commercial buildings. Yet, adoption in practice remains limited. Field demonstrations offer real-world insights and could bridge this gap by validating performance and economic viability. This review examines 104 field studies—24 in residential and 80 in commercial settings—evaluating experiment demographics, protocols, and reported outcomes. We find that 71\% of demonstrations rely on potentially unreliable protocols, while the remaining 29\%, considered more robust, report weighted-average cost savings of 16\% (residential) and 13\% (commercial). However, deployment costs remain underreported; only 13 studies address them. We outline five key recommendations to guide future field research, emphasizing protocol rigor, cost transparency, integration with other distributed energy resources, and emerging grid services.},
+  selected    = {true},
+  bibtex_show = {true}
 }
 
 @inproceedings{Khabbazi2024-Herrick,
